<resources>
    <string name="app_name">Kotlin - Marmitex</string>
    <string name="login_email">Email</string>
    <string name="password_text">password</string>
    <string name="button_login_text">Login</string>
    <string name="segunda_activity_toolbar">Segunda Activity</string>
    <string name="title_home">Home</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="title_perfil">Perfil</string>
    <string name="casdatrar_text">Cadastro</string>
    <string name="voltar_text">voltar</string>
    <string name="login_text">Login</string>
    <string name="nome_text">Nome</string>
    <string name="email_text">Email</string>
    <string name="ddd_text">DDD</string>
    <string name="phone_text">Phone</string>
    <string name="endereco_text">Endereco</string>
    <string name="uf_text">UF</string>
    <string name="cidade_cidade">Cidade</string>
    <string name="bairro_text">Bairro</string>
    <string name="salvar_text">Salvar</string>
    <string name="password_secondary_hint">repita o password</string>
    <string name="lock_image_content_description">Imagem de um cadeado</string>

    <!-- TODO: ADICIONAR TODOS OS NOMES DO LAYOUT AQUI -->

</resources>