<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.com.lucad.kotlinmarmitex.views.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pedidos"
        android:name="br.com.lucad.kotlinmarmitex.views.ui.fragments.PedidosFragment"
        android:label="@string/title_pedidos"
        tools:layout="@layout/fragment_pedidos" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="br.com.lucad.kotlinmarmitex.views.ui.fragments.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>