<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:id="@+id/activity_login"
    tools:context=".ui.views.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949" />

    <TextView
        android:id="@+id/text_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <EditText
        android:id="@+id/edit_user_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_16_margin"
        android:layout_marginEnd="@dimen/edit_text_16_margin"
        android:layout_marginBottom="@dimen/edit_text_16_margin"
        android:background="@drawable/button_rect"
        android:hint="Nome"
        android:textColorHint="@color/white"
        android:maxLines="1"
        android:visibility="gone"
        android:padding="18dp"
        app:layout_constraintBottom_toTopOf="@id/edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.511" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_16_margin"
        android:layout_marginTop="@dimen/edit_text_16_margin"
        android:layout_marginEnd="@dimen/edit_text_16_margin"
        android:background="@drawable/button_rect"
        android:hint="@string/password_text"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:padding="18dp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <EditText
        android:id="@+id/edit_password_secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_16_margin"
        android:layout_marginTop="@dimen/edit_text_16_margin"
        android:layout_marginEnd="@dimen/edit_text_16_margin"
        android:background="@drawable/button_rect"
        android:hint="@string/password_secondary_hint"
        android:textColorHint="@color/black"
        android:maxLines="1"
        android:inputType="textPassword"
        android:padding="18dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />


    <ImageView
        android:id="@+id/image_view_login"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_lock_24"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_login"
        app:layout_constraintEnd_toStartOf="@+id/text_view_login"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_view_login"
        app:layout_constraintVertical_bias="0.551" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_16_margin"
        android:layout_marginEnd="@dimen/edit_text_16_margin"
        android:layout_marginBottom="@dimen/edit_text_16_margin"
        android:background="@drawable/button_rect"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginHorizontal="@dimen/button_margin_horizontal"
        android:elevation="@dimen/button_elevation"
        android:background="@drawable/button_rect"
        android:paddingHorizontal="@dimen/button_padding_horizontal"
        android:textColor="@color/white"
        android:backgroundTint="@color/secondary"
        android:text="@string/button_login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <TextView
        android:id="@+id/textView_cadastrar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:paddingHorizontal="24dp"
        android:layout_marginBottom="60dp"
        android:text="@string/casdatrar_text"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="@dimen/button_padding_horizontal"
        android:layout_marginHorizontal="@dimen/button_margin_horizontal"
        android:elevation="@dimen/button_elevation"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/white"
        android:background="@drawable/button_rect"
        android:text="@string/casdatrar_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_secondary" />

</androidx.constraintlayout.widget.ConstraintLayout>